--- a/shapiro_ps3.Rmd
+++ b/shapiro_ps3.Rmd
@@ -17,7 +17,11 @@ library(tidyverse)
 
 ### 1a) $E(7X - 6Y + 12)$
 
+Additivity and homogeneity are two properties of expectations. Thus, we can write this expression as $7E[X]-6E[Y]+12$, or $7\mu_X-6\mu_Y+12$.
+
 ### 1b) Var$(X + 5Y)$
 
 We know that $Var(aX + bY + c) = a^2Var(X) + b^2Var(Y) + 2abCov(X,Y)$. Inserting a 1 and 5 as a and b, we get $\sigma_X^2 + 25\sigma_Y^2 + 10Cov(X,Y)$. $Cov(X,Y) = E[XY] - E[X]E[Y] = E[(X-\mu_X)(Y-\mu_Y)]$. So our final equation is:
 $Var(X + 5Y) = \sigma_X^2 + 25\sigma_Y^2 + 10E[(X-\mu_X)(Y-\mu_Y)]$.
+
+### 1c) $E(5X^2 - 12XY + 16Y^2)$
