--- a/shapiro_ps3.Rmd
+++ b/shapiro_ps3.Rmd
@@ -21,7 +21,33 @@ Additivity and homogeneity are two properties of expectations. Thus, we can writ
 
 ### 1b) Var$(X + 5Y)$
 
-We know that $Var(aX + bY + c) = a^2Var(X) + b^2Var(Y) + 2abCov(X,Y)$. Inserting a 1 and 5 as a and b, we get $\sigma_X^2 + 25\sigma_Y^2 + 10Cov(X,Y)$. $Cov(X,Y) = E[XY] - E[X]E[Y] = E[(X-\mu_X)(Y-\mu_Y)]$. So our final equation is:
+We know that $Var(aX + bY + c) = a^2Var(X) + b^2Var(Y) + 2abCov(X,Y)$. Inserting a 1 and 5 as a and b, we get $\sigma_X^2 + 25\sigma_Y^2 + 10Cov(X,Y)$. $Cov(X,Y) = E[XY] - E[X]E[Y] = E[(X-\mu_X)(Y-\mu_Y)]$. So then we get:
 $Var(X + 5Y) = \sigma_X^2 + 25\sigma_Y^2 + 10E[(X-\mu_X)(Y-\mu_Y)]$.
 
+Because we know that the two variables are so-called "i.i.d." variables, we know that the co-variance is 0. Thus, we can remove the last term entirely and end up with $Var(X + 5Y) = \sigma_X^2 + 25\sigma_Y^2$. 
+
 ### 1c) $E(5X^2 - 12XY + 16Y^2)$
+
+First, we can split these up according to properties shown in 1a. So we get $5E[X^2]-12E[XY]+16E[Y^2]$. 
+
+Now, we can already deal with the first and last bits of this expression. We know that $\sigma_X^2 = E[X^2] - \mu_X^2$ and $\sigma_Y^2 = E[Y^2] - \mu_Y^2$. Thus, $E[X^2] = \sigma_X^2 + \mu_X^2$ and $E[Y^2] = \sigma_Y^2 + \mu_Y^2$. So we can set this as $5\sigma_X^2 + 5\mu_X^2 + 12E[XY] + 16\sigma_Y^2 + 16\mu_Y^2$.
+
+Finally, the question tells us that X and Y are independent random variables. So we know therefore that $E[XY] = E[X]E[Y]$. We can write this as $\mu_X\mu_Y$.
+
+Our final expression: $5\sigma_X^2 + 5\mu_X^2 + 12\mu_X\mu_Y + 16\sigma_Y^2 + 16\mu_Y^2$.
+
+### Question 2 Background:
+
+*Papers like \href{https://scholar.harvard.edu/files/dtingley/files/ajpsscents.pdf}{\color{red}{this one}} have found that married couples tend to sort along ideological lines ("assortative mating"). Say we know the true distribution of ideology among heterosexual married couples along a scale of 1 (very conservative) to 4 (very liberal). The joint distribution for $X$ (the woman's ideology) and $Y$ (the man's ideology) is:*
+  
+\begin{tabular}{c|cccc}
+&\multicolumn{4}{c}{X}\\
+Y & 1 & 2 & 3 & 4 \\
+\hline 
+1 & .12 & .05 & .01 & .01 \\
+2 & .08 & .17 & .05 & .02 \\
+3 & .02 & .01 & .23 & .05 \\
+4 & .02 & .02 & .04 & .10 \\
+\end{tabular}
+
+### 2a) What is the expected value of $X$ and the expected value of $Y$?
